PEBLCORE-216 fix logout message text alignment

--- a/src/css/pebl-login-widget.css
+++ b/src/css/pebl-login-widget.css
@@ -194,6 +194,10 @@ label {
     justify-content: space-evenly;
 }
 
+.confirmLogoutMessage {
+    text-align: center;
+}
+
 .cancel-button {
     max-width: 160px;
     border-radius: .5rem;
